JEL-1564 : pop up button alignment fix

--- a/stylesheets/pages/subscription.less
+++ b/stylesheets/pages/subscription.less
@@ -2646,14 +2646,14 @@
 	                                     width:48%;
 	                                }
 	                                &.button-Proceed{
-	                                    width: 48%;
-										padding:6px;
-										font-size: 16px;
+	                                    width: 49%;
+										padding:6px 4px;
+										font-size: 17px;
 	                                }
 	                                &.button-Back-To-Subscription{
-	                                    width:50%;
-										padding:6px;
-										font-size: 16px;
+	                                    width:49%;
+										padding:6px 4px;
+										font-size: 17px;
 	                                }
 	                                &.button-Get-Started{
 	                                    width:45%;
